--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ constraintlayoutVersion = "2.1.4"
 
 # COROUTINES
 coroutinesVersion = "1.7.1"
+lifecycleViewModelVersion = "2.6.1"
+lifecycleVersion = "2.6.1"
 
 # RETROFIT
 retrofitVersion = "2.9.0"
@@ -18,6 +20,9 @@ hiltVersion = "2.48"
 
 # ROOM DB
 roomVersion = "2.6.1"
+
+# NAVIGATION
+navigationVersion = "2.5.3"
 
 # COIL
 coilVersion = "2.5.0"
@@ -46,6 +51,10 @@ appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompatV
 material = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 
+# LIFECYCLE
+lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleVersion" }
+lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleVersion" }
+
 # COROUTINES
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutinesVersion" }
 kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "coroutinesVersion" }
@@ -63,6 +72,11 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomVersion" }
+
+# NAVIGATION
+
+navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationVersion" }
+navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationVersion" }
 
 # COIL
 coil-kt = { module = "io.coil-kt:coil", version.ref = "coilVersion" }
