--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ coreKtxVersion = "1.12.0"
 appcompatVersion = "1.6.1"
 materialVersion = "1.11.0"
 constraintlayoutVersion = "2.1.4"
+fragmentKtxVersion = "1.5.5"
 
 # COROUTINES
 coroutinesVersion = "1.7.1"
@@ -41,6 +42,7 @@ junit = "1.1.5"
 androidApplicationVersion = "8.2.0"
 androidLibraryVersion = "8.2.0"
 kotlinVersion = "1.9.20"
+safeArgsVersion = "2.5.3"
 
 
 [libraries]
@@ -50,6 +52,7 @@ core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtxVersion" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 material = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
+fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtxVersion" }
 
 # LIFECYCLE
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleVersion" }
@@ -122,3 +125,4 @@ android-library = { id = "com.android.library", version.ref = "androidLibraryVer
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinVersion" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlinVersion" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltVersion" }
+safe-args = { id = "androidx.navigation.safeargs.kotlin",  version.ref  = "safeArgsVersion" }
