--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,7 @@ playServicesLocationVersion = "21.0.1"
 junitVersion = "4.13.2"
 espressoCoreVersion = "3.5.1"
 mockkVersion = "1.13.9"
+turbineVersion = "1.0.0"
 
 # ANDROID TEST
 junit = "1.1.5"
@@ -93,6 +94,7 @@ play-services-location = { module = "com.google.android.gms:play-services-locati
 # TEST
 junit = { module = "junit:junit", version.ref = "junitVersion" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockkVersion" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" }
 
 # ANDROID TEST
 ext-junit = { module = "androidx.test.ext:junit", version.ref = "junit" }
@@ -127,7 +129,8 @@ coroutines = [
 testing = [
     "junit",
     "mockk",
-    "coroutines-android-test"
+    "coroutines-android-test",
+    "turbine"
 ]
 
 # ANDROID TESTING
