--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,18 +33,21 @@ playServicesLocationVersion = "21.0.1"
 
 # TEST
 junitVersion = "4.13.2"
-espressoCoreVersion = "3.5.1"
 mockkVersion = "1.13.9"
 turbineVersion = "1.0.0"
 
 # ANDROID TEST
 junit = "1.1.5"
+espressoCoreVersion = "3.5.1"
+fragmentTesting = "1.6.2"
+testRunner = "1.5.2"
 
 # PLUGINS
 androidApplicationVersion = "8.2.0"
 androidLibraryVersion = "8.2.0"
 kotlinVersion = "1.9.20"
 safeArgsVersion = "2.5.3"
+testRulesVersion = "1.5.0"
 
 
 [libraries]
@@ -99,9 +102,14 @@ turbine = { module = "app.cash.turbine:turbine", version.ref = "turbineVersion" 
 # ANDROID TEST
 ext-junit = { module = "androidx.test.ext:junit", version.ref = "junit" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
+espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espressoCoreVersion" }
 hilt-android-test = { module = "com.google.dagger:hilt-android-testing", version.ref = "hiltVersion" }
 hilt-android-compiler-test = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltVersion" }
 coroutines-android-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutinesVersion" }
+fragment-testing = { module = "androidx.fragment:fragment-testing", version.ref = "fragmentTesting" }
+fragment-testing-manifest = { module = "androidx.fragment:fragment-testing-manifest", version.ref = "fragmentTesting" }
+androidx-test-rules = { module = "androidx.test:rules", version.ref = "testRulesVersion" }
+testRunner = { module = "androidx.test:runner", version.ref = "testRulesVersion" }
 
 
 [bundles]
@@ -136,10 +144,20 @@ testing = [
 # ANDROID TESTING
 androidTesting = [
     "ext-junit",
-    "espresso-core",
     "hilt-android-test",
     "mockwebserver",
-    "coroutines-android-test"
+    "coroutines-android-test",
+    "testRunner"
+]
+
+uiTesting = [
+    "espresso-contrib",
+    "fragment-testing",
+    "fragment-testing-manifest",
+    "ext-junit",
+    "hilt-android-test",
+    "coroutines-android-test",
+    "androidx-test-rules"
 ]
 
 
